adding two figures one distribution of BMI one distribution of Groups

--- a/docs/Learning.qmd
+++ b/docs/Learning.qmd
@@ -38,5 +38,30 @@ post_meal_data
 
 ```
 ```{r}
-glimpse(post_meal_data)```
+glimpse(post_meal_data)
+```
 
+
+```{r}
+ggplot(post_meal_data, aes(x = BMI)) +
+  geom_histogram()
+```
+```{r}
+#| fig-cap: "Distribution of BMI"
+#| label: fig-bmi-histo
+ggplot(post_meal_data, aes(x = BMI)) +
+  geom_histogram()
+```
+
+@fig-bmi-histo
+
+## Exercise: discrete plots
+
+```{r}
+#| fig-cap: "Distribution of groups"
+#| label: fig-group-bar
+ggplot(post_meal_data, aes(x = Group)) +
+  geom_bar()
+```
+
+See @fig-group-bar above for a cool plot!
