--- a/docs/Learning.qmd
+++ b/docs/Learning.qmd
@@ -17,7 +17,8 @@ format: html
 #| warning: false
 library(tidyverse)
 post_meal_data <- read_csv2(
-here::here("data/post-meal-insulin.csv"))
+  here::here("data/post-meal-insulin.csv")
+)
 ```
 ## About me
 
@@ -35,7 +36,6 @@ here::here("data/post-meal-insulin.csv"))
 
 ```{r}
 post_meal_data
-
 ```
 ```{r}
 glimpse(post_meal_data)
@@ -65,3 +65,56 @@ ggplot(post_meal_data, aes(x = Group)) +
 ```
 
 See @fig-group-bar above for a cool plot!
+
+## Plotting two discrete variables
+
+```{r}
+post_meal_data |>
+  ggplot(aes(x = Group, fill = as.character(glykemi))) +
+  geom_bar()
+```
+
+```{r}
+post_meal_data |>
+  ggplot(aes(x = Group, fill = as.character(glykemi))) +
+  geom_bar(position = position_dodge())
+```
+## Putting tow plots side by side
+
+```{r}
+ggplot(post_meal_data, aes(x = BMI)) +
+  geom_histogram()
+```
+
+```{r}
+post_meal_data |>
+  ggplot(aes(x = Group, fill = as.character(glykemi))) +
+  geom_bar()
+```
+
+```{r side-by-side-figs}
+#| label: fig-bmi-glycemi
+#| fig-cap: "BMI and glycemia side by side"
+#| fig-subcap:
+#| - "Distribution of BMI"
+#| - "Number of those with glycemia"
+#| layout-ncol: 2
+ggplot(post_meal_data, aes(x = BMI)) +
+  geom_histogram()
+
+post_meal_data |>
+  ggplot(aes(x = Group, fill = as.character(glykemi))) +
+  geom_bar()
+```
+
+## Plotting two continous variables
+
+```{r plotting two continous variables}
+#| fig-cap: "Scatterplot of BMI and area under the curve of glycemia"
+#| label: fig-scatterplot-bmi-aucglucose
+#| echo: false
+ggplot(post_meal_data, aes(x = BMI, y = auc_pg)) +
+  geom_point() +
+  geom_smooth()
+
+```
