trying out the selection function

--- a/docs/Learning.qmd
+++ b/docs/Learning.qmd
@@ -19,6 +19,8 @@ library(tidyverse)
 post_meal_data <- read_csv2(
   here::here("data/post-meal-insulin.csv")
 )
+
+small_post_meal_data <- select(post_meal_data, id, Age, BMI, Group, auc_pg, auc_ins, glykemi)
 ```
 ## About me
 
@@ -116,8 +118,23 @@ post_meal_data |>
 ggplot(post_meal_data, aes(x = BMI, y = auc_pg)) +
   geom_point() +
   geom_smooth()
-
 ```
 ## Pushing changes to remote
 
 ## Pulling changes locally
+
+## Selecting data
+
+```{r Select chunk}
+select(post_meal_data, Age)
+
+select(post_meal_data, Age, BMI, Weight)
+
+select(post_meal_data, -Group)
+
+select(post_meal_data, starts_with("PG"))
+
+select(post_meal_data, ends_with("DXA"))
+
+select(post_meal_data, contains("0"))
+```
