testing rename function

--- a/docs/Learning.qmd
+++ b/docs/Learning.qmd
@@ -138,3 +138,16 @@ select(post_meal_data, ends_with("DXA"))
 
 select(post_meal_data, contains("0"))
 ```
+
+## Renaming specific column
+
+```{r Renaming specific column}
+small_post_meal_data |>
+  rename(auc_glucose = auc_pg)
+
+small_post_meal_data |>
+  rename(
+    auc_glucose = auc_pg,
+    auc_insulin = auc_ins
+  )
+```
