--- a/docs/Learning.qmd
+++ b/docs/Learning.qmd
@@ -214,3 +214,18 @@ tidier_post_meal_data |>
     Group = if_else(Group == "CTR", "Control", "First-degree relative")
   )
 ```
+
+## Practice with filter and mutate
+
+```{r Practice with filter and mutate}
+# Task 1.
+post_meal_data |>
+  filter(BMI >= 20 & BMI <= 40 & Group == "FDR")
+
+# Task 2.
+post_meal_data |>
+  mutate(
+    percent_body_fat = (Fat.mass.DXA / Weight) * 100
+  ) |>
+  filter(percent_body_fat > 30)
+```
