--- a/docs/Learning.qmd
+++ b/docs/Learning.qmd
@@ -318,3 +318,25 @@ post_meal_data |>
   geom_point() +
   scale_colour_viridis_c(option = "inferno")
 ```
+
+## Calculating summary statistics
+
+```{r Calculating summary statistics}
+tidied_post_meal_data |>
+  summarise(
+    max_bmi = max(BMI),
+    min_bmi = min(BMI)
+  )
+```
+
+## Summarize with splitting
+
+```{r Summarize with splitting}
+tidied_post_meal_data |>
+  group_by(Group) |>
+  summarise(
+    mean_age = mean(Age),
+    mean_bmi = mean(BMI)
+  ) |>
+  ungroup()
+```
