--- a/docs/Learning.qmd
+++ b/docs/Learning.qmd
@@ -332,11 +332,16 @@ tidied_post_meal_data |>
 ## Summarize with splitting
 
 ```{r Summarize with splitting}
+#| label: tbl-mean-age-bmi
+#| tbl-cap: "Mean values of Age and BMI for each group."
 tidied_post_meal_data |>
   group_by(Group) |>
   summarise(
-    mean_age = mean(Age),
-    mean_bmi = mean(BMI)
+    "Mean Age (yrs)" = round(mean(Age), 1),
+    "Mean Body Mass Index (kg/m^2^)" = round(mean(BMI), 1)
   ) |>
-  ungroup()
+  ungroup() |>
+  knitr::kable()
 ```
+
+See @tbl-mean-age-bmi
