--- a/docs/Learning.qmd
+++ b/docs/Learning.qmd
@@ -345,3 +345,36 @@ tidied_post_meal_data |>
 ```
 
 See @tbl-mean-age-bmi
+
+## Bigger table
+
+```{r}
+#| label: tbl-summary-table
+#| tbl-cap: "Median values of AUC measurements by age group and family history group."
+post_meal_data |>
+  # Task 2.
+  filter(BMI < 30) |>
+  # Task 3.
+  mutate(
+    age_group = if_else(Age < 40, "Young", "Old"),
+    Group = if_else(Group == "CTR", "Control", "First-degree relative")
+  ) |>
+  # Task 4.
+  group_by(Group, age_group) |>
+  summarise(
+    "AUC c-Peptide" = round(median(auc_cp), 1),
+    "AUC Glucose" = round(median(auc_pg), 1),
+    "AUC Insulin" = round(median(auc_ins), 1)
+  ) |>
+  # Task 5.
+  rename(
+    "Age group" = age_group,
+    "Family history" = Group
+  ) |>
+  # Task 6.
+  ungroup() |>
+  knitr::kable()
+```
+
+See @tbl-summary-table, very nice table! :D
+```
